--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
       name="description"
       content="Willkommen in der alten Backstube Rosenthal – Genieße traditionelle Rezepte in gemütlicher Atmosphäre. Tischreservierung - Eventplanungen - Getränkekarte"
     />
-    <title>Startseite - Zur alten Backstube Berlin</title>
+    <title>Zur alten Backstube Berlin - Das traditionelle Kaffeehaus in Rosenthal</title>
     <link rel="stylesheet" href="/styles.css" />
     <link
       rel="preload"
@@ -38,13 +38,14 @@
           <div class="main-content">
             <h3>Unsere Historie</h3>
             <p>
-              Bereits 1863 wurde unser traditionsreiches Kaffeehaus ins Leben
+              Bereits 1863 wurde unsere alte Backstube in Rosenthal ins Leben
               gerufen – ein Ort, der seit jeher Begegnungen, Inspiration und
               Genuss miteinander verbindet. In seinen ehrwürdigen Räumen,
               geschmückt mit antiken Möbeln und liebevoll restaurierten Details,
-              spürt man den Hauch vergangener Zeiten. Generationen von Gästen
-              haben hier ihre Geschichten geschrieben, und die ursprüngliche
-              Leidenschaft der Gründer lebt in jedem Winkel fort.
+              spürt man den Hauch vergangener Zeiten. <br> 
+              Gemeinsam mit meinem Vater betreiben wir nun in 5. Generation Ziekow die alte Backstube
+              und bieten jeden Samstag und Sonntag frischen Kuchen mit einer
+              großen Auswahl an <a href="/menu">Getränken</a> an.
             </p>
           </div>
           <div class="img-container right-image flex_einfliegen">
@@ -60,19 +61,20 @@
       <div class="container">
         <div class="flex-space-between flex-reverse">
           <div class="img-container left-image flex_einfliegen">
-            <img src="/images/2024-03-05.webp" alt="Eingangsbereich heute" />
+            <img src="/images/2024-03-05.webp" alt="Esstisch für 2 Personen" />
           </div>
           <div class="main-content">
-            <h3>Tradition im Wandel</h3>
+            <h3>Was erwartet dich bei uns</h3>
             <p>
-              Im Laufe der Jahrzehnte hat sich unser Kaffeehaus dem Wandel der
-              Zeit stets angepasst, ohne seinen authentischen Charakter zu
-              verlieren. Moderne Einflüsse und behutsame Renovierungen haben
-              dafür gesorgt, dass klassische Elemente – von der Einrichtung bis
-              zu traditionellen Rezepten – erhalten bleiben. Diese gelungene
-              Balance zwischen historischer Bewahrung und zeitgemäßem Flair
-              macht unseren Ort zu einem einzigartigen Erlebnis, das
-              Vergangenheit und Gegenwart harmonisch miteinander vereint.
+              Auf unsere Webseite findest du die <a href="/menu">Getränkekarte</a>, 
+              die <a href="/geschichte">Geschichte</a> der alten Backstube
+              und alle Informationen zu anstehenden und vergangenen Veranstaltungen bei uns.
+              Hier verpasst du nichts mehr! <br>
+              Falls neue Veranstaltungen anstehen, 
+              kannst du <a href="/blog">hier</a> auf dem laufenden bleiben. <br>
+              Möchtest du einen Tisch reservieren? <br>
+              Bei uns kannst du ganz leicht für 2-Wochen im Vorraus einen Tisch deiner Wahl reservieren.
+              Neue Termine werden jeden Samstag um 08:00 Uhr freigeschaltet. 
             </p>
           </div>
         </div>
@@ -84,9 +86,9 @@
           <div class="main-content">
             <h3>Aktuelles Angebot & Veranstaltungen</h3>
             <p>
-              Heute laden wir Sie ein, in unserem liebevoll restaurierten
-              Ambiente unvergessliche Momente zu genießen. Wir jeden Samstag und
-              Sonntag von 13 bis 17 Uhr für Sie geöffnet – perfekt für einen
+              Wir laden dich ein, in unserem liebevoll restaurierten
+              Ambiente gemeisam einen schönen Nachmittag zu verbrigen. Jeden Samstag und
+              Sonntag haben wir von 13 bis 17 Uhr für dich geöffnet – perfekt für einen
               entspannten Nachmittag mit Freunden oder der Familie. Darüber
               hinaus bieten wir unser charmantes Kaffeehaus auch als
               Veranstaltungsort an: Ob private Feiern, Firmen-Events oder
@@ -94,11 +96,11 @@
               einem authentischen historischen Rahmen auszurichten.
             </p>
             <div class="contant-buttons">
-              <a href="/eventbuchung" class="blog-button">Eventplaner</a>
+              <a href="/eventbuchung" class="blog-button">Planen deine Feier bei uns!</a>
             </div>
           </div>
           <div class="img-container last right-image flex_einfliegen">
-            <img src="/images/2024-07-22.webp" alt="Eingangsbereich heute" />
+            <img src="/images/2024-07-22.webp" alt="Esstisch für 3 Personen" />
           </div>
         </div>
       </div>
