--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
     </div>
     <div class="section overflow-hidden padding-tb-40">
       <div class="container">
-        <div class="flex-space-between flex-reverse">
+        <div class="flex-space-between flex-reverse-main">
           <div class="img-container left-image flex_einfliegen">
             <img src="/images/2024-03-05.webp" alt="Esstisch für 2 Personen" />
           </div>
