feier buchen footer, text index und slider for mobile

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,9 +72,9 @@
               Hier verpasst du nichts mehr! <br>
               Falls neue Veranstaltungen anstehen, 
               kannst du <a href="/blog">hier</a> auf dem laufenden bleiben. <br>
-              Möchtest du einen Tisch reservieren? <br>
+              <!-- Möchtest du einen Tisch reservieren? <br>
               Bei uns kannst du ganz leicht für 2-Wochen im Vorraus einen Tisch deiner Wahl reservieren.
-              Neue Termine werden jeden Samstag um 08:00 Uhr freigeschaltet. 
+              Neue Termine werden jeden Samstag um 08:00 Uhr freigeschaltet.  -->
             </p>
           </div>
         </div>
