--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,7 +15,7 @@
       <div>
         <h4>Funktionen</h4>
         <!-- <a href="/reservation">Tisch Reservierung</a> -->
-        <a href="/eventbuchung">Event Buchung</a>
+        <a href="/eventbuchung">Feier buchen</a>
         <a href="/blog">Veranstaltungen</a>
       </div>
       <div>
