eventbuchung trauerfeier, slideOnScroll, header

--- a/views/eventbuchung.ejs
+++ b/views/eventbuchung.ejs
@@ -58,7 +58,7 @@
                   required
                   hidden
                 />
-                <label class="radio-event" for="Beerdigung">Beerdigung</label>
+                <label class="radio-event" for="Beerdigung">Trauerfeier</label>
                 <input
                   type="radio"
                   id="Andere"
