changed menu, so you can add new categories, change order of categories and change name of them, also added new route in the ajax file and new route in the index.js file, added cardpay image to footer

--- a/public/styles.css
+++ b/public/styles.css
@@ -42,6 +42,7 @@ h3 {
   align-self: center;
   align-content: center;
   text-align: center;
+  margin: 0 auto;
 }
 
 .m-b-0 {
@@ -1023,6 +1024,7 @@ input[type="radio"]:checked + .radio-label {
 }
 
 .left-footer p,
+.left-footer a,
 .right-footer a {
   font-size: 1em;
   margin: 0;
@@ -1658,4 +1660,10 @@ body.loading {
 
 .cookie-content a:hover {
   text-decoration: underline;
+}
+
+.kartenzahlung-image img{
+  width: 170px;
+  height: 230px;
+  border-radius: 10px;
 }
