--- a/views/geschichte.ejs
+++ b/views/geschichte.ejs
@@ -38,8 +38,8 @@
       <div class="container">
         <%- include('partials/header') %>
         <h2 style="text-align: center">Die Geschichte der alten Backstube</h2>
-        <div class="split-area slide-left">
-          <div class="text-container">
+        <div class="split-area">
+          <div class="text-container slide-left">
             <h3>Der Beginn</h3>
             <p>
               Bereits 1863 entschloss sich Albert Ziekow mit seiner Frau Emilie
@@ -49,7 +49,7 @@
               später in der Hauptstraße 179.
             </p>
           </div>
-          <div class="image-containers">
+          <div class="image-containers slide-left">
             <img
               src="/images/Kutsche.jpeg"
               alt="Die alte Backstube"
@@ -58,8 +58,8 @@
             />
           </div>
         </div>
-        <div class="split-area flex-reverse slide-right opacity0">
-          <div class="text-container">
+        <div class="split-area flex-reverse">
+          <div class="text-container slide-right opacity0">
             <h3>Kauf der Bäckerei</h3>
             <p>
               Einen Bäckerladen gab es zu dieser Zeit noch nicht - die frischen
@@ -69,7 +69,7 @@
               befindliche Haus in der Hauptstraße 155 zu erwerben.
             </p>
           </div>
-          <div class="image-containers">
+          <div class="image-containers slide-right opacity0">
             <img
               src="/images/SchwarzWeiß.jpg"
               alt="Die alte Backstube"
@@ -78,8 +78,8 @@
             />
           </div>
         </div>
-        <div class="split-area slide-left">
-          <div class="text-container">
+        <div class="split-area ">
+          <div class="text-container slide-left">
             <h3>Eröffnung</h3>
             <p>
               Hier eröffneten die Eheleute etwa 1918 die Bäckerei Ziekow in den
@@ -91,7 +91,7 @@
               Bäckers.
             </p>
           </div>
-          <div class="image-containers">
+          <div class="image-containers slide-left">
             <img
               src="/images/Reifen.jpg"
               alt="Die alte Backstube"
@@ -99,8 +99,8 @@
             />
           </div>
         </div>
-        <div class="split-area flex-reverse slide-right">
-          <div class="text-container">
+        <div class="split-area flex-reverse ">
+          <div class="text-container slide-right">
             <h3>Nachkriegszeit</h3>
             <p>
               Ein Jahr nach Ende des Zweiten Weltkrieges heiratete Willy seine
@@ -111,7 +111,7 @@
               durch die DDR am 16.08.1987.
             </p>
           </div>
-          <div class="image-containers">
+          <div class="image-containers slide-right">
             <img
               src="/images/Urkunde.jpg"
               alt="Die alte Backstube"
@@ -119,8 +119,8 @@
             />
           </div>
         </div>
-        <div class="split-area slide-left">
-          <div class="text-container">
+        <div class="split-area">
+          <div class="text-container slide-left">
             <h3>Heute</h3>
             <p>
               Im Frühjahr 2007 erwachten die alten Gemäuer aus ihrem 20jährigen
@@ -129,7 +129,7 @@
               in dem nun wieder selbst gebackener Kuchen genossen werden kann.
             </p>
           </div>
-          <div class="image-containers">
+          <div class="image-containers slide-left">
             <img
               src="/images/2Typen.jpg"
               alt="Die alte Backstube"
