--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -5,24 +5,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Getränkekarte</title>
     <link rel="stylesheet" href="/styles.css" />
-    <meta name="description" content="Getränkekarte zur alten Backstube. Hier findest du alle Getränke, welche in unserer Backstube angeboten werden.">
+    <meta
+      name="description"
+      content="Getränkekarte zur alten Backstube. Hier findest du alle Getränke, welche in unserer Backstube angeboten werden."
+    />
     <!-- Include jQuery from CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
+  <style>
+    .hinweis {
+      display: inline;
+      font-size: 5px;
+    }
+  </style>
   <body>
     <div class="section">
       <%- include('partials/header') %>
       <h2 class="center">Getränkekarte</h2>
 
+      <% if (user && user.isAdmin) { %>
+      <div class="menu-card add-category center">
+        <h2 class="category-title">Neue Kategorie erstellen</h2>
+        <form class="add-category-form">
+          <input type="text" name="category" placeholder="Kategorie" required />
+          <input type="text" name="name" placeholder="Getränkname" required />
+          <input type="text" name="hinweis" placeholder="Hinweis" />
+          <input
+            type="number"
+            name="price"
+            placeholder="Preis"
+            step="0.1"
+            required
+          />
+          <input type="number" name="sort" placeholder="Reinfolge" required />
+          <button type="submit">Kategorie & Getränk hinzufügen</button>
+        </form>
+      </div>
+      <% } %>
+
       <div class="menu-container">
         <% categories.forEach(category => { %>
         <div class="menu-card" data-category="<%= category.mainCategory %>">
+          <% if (user && user.isAdmin) { %>
+          <div class="category-edit">
+            <input
+              type="text"
+              class="category-name-input"
+              value="<%= category.mainCategory %>"
+              data-category="<%= category.mainCategory %>"
+            />
+            <%= console.log(category.sort)%>
+            <input
+              type="number"
+              class="category-sort-input"
+              value="<%= category.sort %>"
+              placeholder="Reihenfolge"
+              data-category="<%= category.mainCategory %>"
+            />
+            <button
+              class="update-category"
+              data-category="<%= category.mainCategory %>"
+            >
+              ✅
+            </button>
+          </div>
+          <% } else { %>
           <h2 class="category-title"><%= category.mainCategory %></h2>
+          <% } %>
           <ul class="drink-list">
             <% category.drinks.forEach(drink => { if (!(user && user.isAdmin)
             &&!drink.enabled) return; %>
             <li class="drink-item" data-drink-id="<%= drink.id %>">
-              <span class="drink-name"><%= drink.name %></span>
+              <span class="drink-name"
+                ><%= drink.name %>
+                <p class="hinweis"><%=drink.hinweis %></p></span
+              >
               <span class="drink-price">
                 <% if (user && user.isAdmin) { %>
                 <input
@@ -78,7 +135,7 @@
                 step="0.1"
                 required
               />
-              <input type="text" name="image" placeholder="Bild" />
+              <input type="text" name="hinweis" placeholder="Hinweis" />
               <!-- Optional: description field -->
               <button type="submit">Hinzufügen</button>
             </form>
