--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,6 +2,10 @@
   <div class="first-row">
     <div class="left-footer">
       <div>
+        <div class="kartenzahlung-image">
+          <img src="/images/kartenzahlung.webp" alt="Kartenzahlung bild" />
+        </div>
+        <a>Kartenzahlung möglich</a>
         <!-- <h4>LOGO</h4>
         <p>Webseite meines Kaffees in Rosenthal - Berlin</p> -->
       </div>
@@ -11,6 +15,7 @@
         <h4>Unternehmen</h4>
         <a href="/impressum">Über Uns</a>
         <a href="/impressum">Kontakt</a>
+        <!-- <a href="/menu">Getränkekarte</a> -->
       </div>
       <div>
         <h4>Funktionen</h4>
