--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,9 +23,9 @@ rel="stylesheet"
         <a href="/newBlog">Neuer Blog</a>
         <a href="/logout">Log-Out</a>
         <% } %>
-        <a href="/menu">Getränkekarte</a>
-        <a href="/eventbuchung">Feier buchen</a>
         <a href="/geschichte">Geschichte</a>
+        <!-- <a href="/menu">Getränkekarte</a> -->
+        <a href="/eventbuchung">Feier buchen</a>
         <a href="/blog">Veranstaltungen</a>
         <!-- <a href="/reservation" class="reserve-button">Reservierung</a> -->
       </div>
