--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,6 +14,7 @@
       <div>
         <h4>Unternehmen</h4>
         <a href="/impressum">Über Uns</a>
+        <a href="/geschichte">Geschichte</a>
         <a href="/impressum">Kontakt</a>
         <!-- <a href="/menu">Getränkekarte</a> -->
       </div>
