--- a/views/geschichte.ejs
+++ b/views/geschichte.ejs
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Geschichte</title>
-    <link rel="stylesheet" href="/styles.css" />
     <meta name="description" content="Die Enstehungsgeschichte der alten Backstube. Uns gibt es bereits seit 1863. 5. Generation Familie Ziekow">
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
   </head>
   <style>
     .split-area {
