--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -6,6 +6,7 @@
     <title>Tisch Reservierung</title>
     <meta name="description" content="Tischreservierung zur alten Backstube. Hier kannst du einen Tisch für Samstag oder Sonntag reservieren. Buchung - Reservierung - Reservierung Café">
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
   </head>
   <body class="loading">
     <div class="loader-overlay">
