--- a/views/agb.ejs
+++ b/views/agb.ejs
@@ -6,6 +6,7 @@
     <title>AGB</title>
     <meta name="description" content="Informieren Sie sich über unsere Allgemeinen Geschäftsbedingungen – alle wichtigen Hinweise zu Nutzung, Haftung und rechtlichen Bestimmungen.">
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
   </head>
   <body>
     <div class="section">
