--- a/views/cookies.ejs
+++ b/views/cookies.ejs
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AGB</title>
-    <meta name="description" content="Informieren Sie sich über unsere Allgemeinen Geschäftsbedingungen – alle wichtigen Hinweise zu Nutzung, Haftung und rechtlichen Bestimmungen.">
+    <title>Cookies</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
+    <meta name="description" content="Informieren Sie sich über unsere Cookie-Richtlinie alle wichtigen Hinweise zu Nutzung, Haftung und rechtlichen Bestimmungen.">
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
