--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
+    <meta name="author" content="Blocksdorf, webseitendesignberlin@gmail.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Zur alten Backstube Berlin - Das traditionelle Kaffeehaus in Rosenthal
+    </title>
     <meta
       name="description"
       content="Willkommen in der alten Backstube Rosenthal – Genieße traditionelle Rezepte in gemütlicher Atmosphäre. Tischreservierung - Eventplanungen - Getränkekarte"
     />
-    <title>Zur alten Backstube Berlin - Das traditionelle Kaffeehaus in Rosenthal</title>
+    <meta
+      name="keywords"
+      content="Cafe, Kaffee Rosenthal, Alte Backstube, Cafe near"
+    />
+    <meta property="og:site_name" content="Zur alten Backstube" />
+    <meta property="og:url" content="https://www.zuraltenbackstube.de" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.svg" />
     <link rel="stylesheet" href="/styles.css" />
     <link
       rel="preload"
@@ -42,10 +52,11 @@
               gerufen – ein Ort, der seit jeher Begegnungen, Inspiration und
               Genuss miteinander verbindet. In seinen ehrwürdigen Räumen,
               geschmückt mit antiken Möbeln und liebevoll restaurierten Details,
-              spürt man den Hauch vergangener Zeiten. <br> 
-              Gemeinsam mit meinem Vater betreiben wir nun in 5. Generation Ziekow die alte Backstube
-              und bieten jeden Samstag und Sonntag frischen Kuchen mit einer
-              großen Auswahl an <a href="/menu">Getränken</a> an.
+              spürt man den Hauch vergangener Zeiten. <br />
+              Gemeinsam mit meinem Vater betreiben wir nun in 5. Generation
+              Ziekow die alte Backstube und bieten jeden Samstag und Sonntag
+              frischen Kuchen mit einer großen Auswahl an
+              <a href="/menu">Getränken</a> an.
             </p>
           </div>
           <div class="img-container right-image flex_einfliegen">
@@ -66,12 +77,13 @@
           <div class="main-content">
             <h3>Was erwartet dich bei uns</h3>
             <p>
-              Auf unsere Webseite findest du die <a href="/menu">Getränkekarte</a>, 
-              die <a href="/geschichte">Geschichte</a> der alten Backstube
-              und alle Informationen zu anstehenden und vergangenen Veranstaltungen bei uns.
-              Hier verpasst du nichts mehr! <br>
-              Falls neue Veranstaltungen anstehen, 
-              kannst du <a href="/blog">hier</a> auf dem laufenden bleiben. <br>
+              Auf unsere Webseite findest du die
+              <a href="/menu">Getränkekarte</a>, die
+              <a href="/geschichte">Geschichte</a> der alten Backstube und alle
+              Informationen zu anstehenden und vergangenen Veranstaltungen bei
+              uns. Hier verpasst du nichts mehr! <br />
+              Falls neue Veranstaltungen anstehen, kannst du
+              <a href="/blog">hier</a> auf dem laufenden bleiben. <br />
               <!-- Möchtest du einen Tisch reservieren? <br>
               Bei uns kannst du ganz leicht für 2-Wochen im Vorraus einen Tisch deiner Wahl reservieren.
               Neue Termine werden jeden Samstag um 08:00 Uhr freigeschaltet.  -->
@@ -86,17 +98,19 @@
           <div class="main-content">
             <h3>Aktuelles Angebot & Veranstaltungen</h3>
             <p>
-              Wir laden dich ein, in unserem liebevoll restaurierten
-              Ambiente gemeisam einen schönen Nachmittag zu verbrigen. Jeden Samstag und
-              Sonntag haben wir von 13 bis 17 Uhr für dich geöffnet – perfekt für einen
-              entspannten Nachmittag mit Freunden oder der Familie. Darüber
-              hinaus bieten wir unser charmantes Kaffeehaus auch als
+              Wir laden dich ein, in unserem liebevoll restaurierten Ambiente
+              gemeisam einen schönen Nachmittag zu verbrigen. Jeden Samstag und
+              Sonntag haben wir von 13 bis 17 Uhr für dich geöffnet – perfekt
+              für einen entspannten Nachmittag mit Freunden oder der Familie.
+              Darüber hinaus bieten wir unser charmantes Kaffeehaus auch als
               Veranstaltungsort an: Ob private Feiern, Firmen-Events oder
               kulturelle Zusammenkünfte, wir freuen uns darauf, Ihr Event in
               einem authentischen historischen Rahmen auszurichten.
             </p>
             <div class="contant-buttons">
-              <a href="/eventbuchung" class="blog-button">Planen deine Feier bei uns!</a>
+              <a href="/eventbuchung" class="blog-button"
+                >Planen deine Feier bei uns!</a
+              >
             </div>
           </div>
           <div class="img-container last right-image flex_einfliegen">
