added canonical page and changed icon type

--- a/views/impressum.ejs
+++ b/views/impressum.ejs
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Impressum</title>
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
-    <meta name="description" content="Impressum: Alle rechtlichen Informationen zu Zur Alten Backstube. Hier finden Sie Kontaktangaben, Verantwortlichkeiten und weitere wichtige Details.">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="canonical" href="https://www.zuraltenbackstube.de/impressum">
+        <meta name="description" content="Impressum: Alle rechtlichen Informationen zu Zur Alten Backstube. Hier finden Sie Kontaktangaben, Verantwortlichkeiten und weitere wichtige Details.">
   </head>
   <body>
     <div class="section">
