--- a/views/agb.ejs
+++ b/views/agb.ejs
@@ -6,7 +6,8 @@
     <title>AGB</title>
     <meta name="description" content="Informieren Sie sich über unsere Allgemeinen Geschäftsbedingungen – alle wichtigen Hinweise zu Nutzung, Haftung und rechtlichen Bestimmungen.">
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="canonical" href="https://www.zuraltenbackstube.de/agb">
   </head>
   <body>
     <div class="section">
