--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
-    <meta name="description" content="Frühere Veranstaltungen, Besondere Anlässe, Events. Hier findest du alle Neuigkeiten und anstehenden Veranstaltungen.">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="canonical" href="https://www.zuraltenbackstube.de/blog">
+        <meta name="description" content="Frühere Veranstaltungen, Besondere Anlässe, Events. Hier findest du alle Neuigkeiten und anstehenden Veranstaltungen.">
   </head>
   <body>
     <div class="section"><%- include('partials/header') %></div>
