--- a/views/booked.ejs
+++ b/views/booked.ejs
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tisch reserviert</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="canonical" href="https://www.zuraltenbackstube.de/booked">
+        <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
     <div class="section">
