--- a/views/cookies.ejs
+++ b/views/cookies.ejs
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cookies</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
-    <meta name="description" content="Informieren Sie sich über unsere Cookie-Richtlinie alle wichtigen Hinweise zu Nutzung, Haftung und rechtlichen Bestimmungen.">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="canonical" href="https://www.zuraltenbackstube.de/cookies">
+        <meta name="description" content="Informieren Sie sich über unsere Cookie-Richtlinie alle wichtigen Hinweise zu Nutzung, Haftung und rechtlichen Bestimmungen.">
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
