--- a/views/datenschutz.ejs
+++ b/views/datenschutz.ejs
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Datenschutz</title>
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
-    <meta name="description" content="Erfahren Sie, wie wir Ihre Daten schützen. Unsere Datenschutzerklärung informiert transparent über Erhebung, Nutzung und Sicherheit Ihrer Informationen.">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="canonical" href="https://www.zuraltenbackstube.de/datenschutz">
+        <meta name="description" content="Erfahren Sie, wie wir Ihre Daten schützen. Unsere Datenschutzerklärung informiert transparent über Erhebung, Nutzung und Sicherheit Ihrer Informationen.">
   </head>
   <body>
     <div class="section">
