--- a/views/geschichte.ejs
+++ b/views/geschichte.ejs
@@ -6,8 +6,9 @@
     <title>Geschichte</title>
     <meta name="description" content="Die Enstehungsgeschichte der alten Backstube. Uns gibt es bereits seit 1863. 5. Generation Familie Ziekow">
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
-  </head>
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="canonical" href="https://www.zuraltenbackstube.de/geschichte">
+    </head>
   <style>
     .split-area {
       display: flex;
