--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,8 @@
     />
     <meta property="og:site_name" content="Zur alten Backstube" />
     <meta property="og:url" content="https://www.zuraltenbackstube.de" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="canonical" href="https://www.zuraltenbackstube.de">
     <link rel="stylesheet" href="/styles.css" />
     <link
       rel="preload"
