--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -9,8 +9,9 @@
       name="description"
       content="Getränkekarte zur alten Backstube. Hier findest du alle Getränke, welche in unserer Backstube angeboten werden."
     />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
-    <!-- Include jQuery from CDN -->
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="canonical" href="https://www.zuraltenbackstube.de/menu">
+        <!-- Include jQuery from CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <style>
