changed titel index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta name="author" content="Blocksdorf, webseitendesignberlin@gmail.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Zur alten Backstube Berlin - Das traditionelle Kaffeehaus in Rosenthal
+      Zur alten Backstube Berlin
     </title>
     <meta
       name="description"
