--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,25 @@
       href="/images/landingimage.WEBP"
       type="image/webp"
     />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Zur alten Backstube",
+        "image": "https://www.yourdomain.com/images/favicon.svg",
+        "@id": "https://www.zuraltenbackstube.de",
+        "url": "https://www.zuraltenbackstube.de",
+        "telephone": "+49 30 47488482",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Hauptstraße 155",
+          "addressLocality": "Berlin",
+          "postalCode": "13158",
+          "addressCountry": "DE"
+        },
+        "openingHours": "Sa-So 13:00-17:00"
+      }
+      </script>
   </head>
   <body class="index-body">
     <div class="hero">
