--- a/views/agb.ejs
+++ b/views/agb.ejs
@@ -7,6 +7,7 @@
     <meta name="description" content="Informieren Sie sich über unsere Allgemeinen Geschäftsbedingungen – alle wichtigen Hinweise zu Nutzung, Haftung und rechtlichen Bestimmungen.">
     <link rel="stylesheet" href="/styles.css" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="canonical" href="https://www.zuraltenbackstube.de/agb">
   </head>
   <body>
