--- a/views/cookies.ejs
+++ b/views/cookies.ejs
@@ -6,6 +6,7 @@
     <title>Cookies</title>
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="canonical" href="https://www.zuraltenbackstube.de/cookies">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
         <meta name="description" content="Informieren Sie sich über unsere Cookie-Richtlinie alle wichtigen Hinweise zu Nutzung, Haftung und rechtlichen Bestimmungen.">
     <link rel="stylesheet" href="/styles.css" />
   </head>
