--- a/views/geschichte.ejs
+++ b/views/geschichte.ejs
@@ -7,6 +7,7 @@
     <meta name="description" content="Die Enstehungsgeschichte der alten Backstube. Uns gibt es bereits seit 1863. 5. Generation Familie Ziekow">
     <link rel="stylesheet" href="/styles.css" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="canonical" href="https://www.zuraltenbackstube.de/geschichte">
     </head>
   <style>
