--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles.css" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="canonical" href="https://www.zuraltenbackstube.de/blog">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
         <meta name="description" content="Frühere Veranstaltungen, Besondere Anlässe, Events. Hier findest du alle Neuigkeiten und anstehenden Veranstaltungen.">
   </head>
   <body>
