--- a/views/datenschutz.ejs
+++ b/views/datenschutz.ejs
@@ -6,6 +6,7 @@
     <title>Datenschutz</title>
     <link rel="stylesheet" href="/styles.css" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="canonical" href="https://www.zuraltenbackstube.de/datenschutz">
         <meta name="description" content="Erfahren Sie, wie wir Ihre Daten schützen. Unsere Datenschutzerklärung informiert transparent über Erhebung, Nutzung und Sicherheit Ihrer Informationen.">
   </head>
