--- a/views/impressum.ejs
+++ b/views/impressum.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles.css" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="canonical" href="https://www.zuraltenbackstube.de/impressum">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
         <meta name="description" content="Impressum: Alle rechtlichen Informationen zu Zur Alten Backstube. Hier finden Sie Kontaktangaben, Verantwortlichkeiten und weitere wichtige Details.">
   </head>
   <body>
