--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
     <meta property="og:site_name" content="Zur alten Backstube" />
     <meta property="og:url" content="https://www.zuraltenbackstube.de" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="canonical" href="https://www.zuraltenbackstube.de">
     <link rel="stylesheet" href="/styles.css" />
     <link
