--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -11,6 +11,7 @@
     />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link rel="canonical" href="https://www.zuraltenbackstube.de/menu">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
         <!-- Include jQuery from CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
