--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -7,6 +7,7 @@
     <meta name="description" content="Tischreservierung zur alten Backstube. Hier kannst du einen Tisch für Samstag oder Sonntag reservieren. Buchung - Reservierung - Reservierung Café">
     <link rel="stylesheet" href="/styles.css" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="canonical" href="https://www.zuraltenbackstube.de/reservation">
   </head>
   <body class="loading">
