--- a/views/index.ejs
+++ b/views/index.ejs
@@ -120,7 +120,7 @@
             <h3>Aktuelles Angebot & Veranstaltungen</h3>
             <p>
               Wir laden dich ein, in unserem liebevoll restaurierten Ambiente
-              gemeisam einen schönen Nachmittag zu verbrigen. Jeden Samstag und
+              gemeinsam einen schönen Nachmittag zu verbrigen. Jeden Samstag und
               Sonntag haben wir von 13 bis 17 Uhr für dich geöffnet – perfekt
               für einen entspannten Nachmittag mit Freunden oder der Familie.
               Darüber hinaus bieten wir unser charmantes Kaffeehaus auch als
