--- a/views/eventbuchung.ejs
+++ b/views/eventbuchung.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eventbuchung</title>
     <link rel="stylesheet" href="/styles.css" />
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="canonical" href="https://www.zuraltenbackstube.de/eventbuchung">
         <meta name="description" content="Plane dein Event bei uns. Ob Hochzeit, Firmenfeier, Geburtstag, Beerdigung oder sonstige Veranstaltungen. Wir machen es möglich. Veranstaltung - Location - Eventplanung">
   </head>
