added menu back

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@ rel="stylesheet"
         <a href="/logout">Log-Out</a>
         <% } %>
         <a href="/geschichte">Geschichte</a>
-        <!-- <a href="/menu">Getränkekarte</a> -->
+        <a href="/menu">Getränkekarte</a>
         <a href="/eventbuchung">Feier buchen</a>
         <a href="/blog">Veranstaltungen</a>
         <!-- <a href="/reservation" class="reserve-button">Reservierung</a> -->
