--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@ rel="stylesheet"
       <div class="links" id="nav-links">
         <% if(user.isAdmin){%>
         <a href="/allReservations">Alle Reservierungen</a>
-        <a href="/newBlog">Neuer Blog</a>
+        <a href="/newBlog">Neue Veranstaltung</a>
         <a href="/logout">Log-Out</a>
         <% } %>
         <a href="/geschichte">Geschichte</a>
