--- a/views/editBlog.ejs
+++ b/views/editBlog.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog bearbeiten</title>
+    <title>Veranstaltung bearbeiten</title>
     <link rel="stylesheet" href="/styles.css" />
     <style>
       .image-preview {
@@ -29,7 +29,7 @@
     <div class="section">
       <%- include('partials/header') %>
       <div class="container">
-        <h1>Blog bearbeiten</h1>
+        <h1>Veranstaltung bearbeiten</h1>
         <form
           action="/blog/<%= post.id %>/edit"
           method="POST"
