added banner to index page with db setting and changed header and blog naming

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,14 +19,14 @@ rel="stylesheet"
       />
       <div class="links" id="nav-links">
         <% if(user.isAdmin){%>
-        <a href="/allReservations">Alle Reservierungen</a>
+        <!-- <a href="/allReservations">Alle Reservierungen</a> -->
         <a href="/newBlog">Neue Veranstaltung</a>
         <a href="/logout">Log-Out</a>
         <% } %>
         <a href="/geschichte">Geschichte</a>
+        <a href="/blog">Aktuelles</a>
         <a href="/menu">Getränkekarte</a>
         <a href="/eventbuchung">Feier buchen</a>
-        <a href="/blog">Veranstaltungen</a>
         <!-- <a href="/reservation" class="reserve-button">Reservierung</a> -->
       </div>
     </div>
