--- a/public/styles.css
+++ b/public/styles.css
@@ -120,8 +120,16 @@ select {
   position: relative;
 }
 
+.heroLinks{
+  color: var(--main-bg-color) !important;
+}
+
 .hero-heading,
-.hero-text {
+.hero-text{
+  color: var(--main-bg-color) !important;
+}
+
+.hero a{
   color: var(--main-bg-color) !important;
 }
 
