--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="section"><%- include('partials/header') %></div>
-    <h2 class="center">Aktuelles</h2>
+    <h2 class="center" style="padding: 30px 0;">Aktuelles</h2>
     <% if (posts.length === 0) { %>
     <p>Keine Veranstaltungen vorhanden.</p>
     <% } else { %>
