login icon size changed

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,8 +8,8 @@
     <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
     <link
       rel="apple-touch-icon"
-      sizes="180x180"
-      href="/images/LoginPage.png"
+      sizes="256x256"
+      href="/images/LoginPage.svg"
     />
   </head>
   <body>
