login icon to png again

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     <link
       rel="apple-touch-icon"
       sizes="256x256"
-      href="/images/LoginPage.svg"
+      href="/images/LoginPage.png"
     />
   </head>
   <body>
